--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <body>
     <header>
         <!-- Create an unordered list to hold all three rules for the game-->
-        <!-- Remove bullet points in CSS -->
         <ul>
             <li>Rule #1: The first number of the price of the car is revealed and the user is given seven one-dollar bills.</li>
             <li>Rule #2: The user must then predict the next number for the price of the car and for every number the user is from the correct number, they must give back one of the dollar bills.</li>
@@ -24,26 +23,16 @@
     </header>
 
     <main>
-        <!-- Create a div for the cloud outline where the image of the car will be randomly generated -->
-
+        <!-- Create a div where the image of the car will be randomly generated -->
+        <!-- Create a button to start the game -->
         <button id="play-game">Click here to play game!</button>
         <div id="flex">
-            <div id="players-car" class="rotator transition">
-            <!-- <svg viewBox='0 0 105 105' >
-                <path d='M 25,60
-                         a 20,20 1 0,0 0,40
-                         h 50
-                         a 20,20 1 0,0 0,-40
-                         a 10,10 1 0,0 -15,-10
-                         a 15,15 1 0,0 -35,10
-                         z' />
-            </svg> -->
+            <div id="players-car">
+
             </div>
 
         <!-- Create a div where the description of the car will be given  -->
-        <!-- Flex these two divs next to each other in CSS -->
-        <!-- <div id="about-car"> -->
-            <div id="root" class="rotator transition">
+            <div id="root">
 
             </div>
         </div>
@@ -66,22 +55,16 @@
                 <td class="number">
                     <p>
                         <input type="number" placeholder="" class="the-input" id="the-input2" style="width: 190px; font-size: 180px; background-color: #8a00c2;">
-                    <!-- </br>
-                        <button class="insert-number">Click here!</button> -->
                     </p>
                 </td>
                 <td class="number">
                     <p>
                         <input type="number" placeholder="" class="the-input" id="the-input3" style="width: 190px; font-size: 180px; background-color: #8a00c2;">
-                    <!-- </br>
-                        <button class="insert-number">Click here!</button> -->
                     </p>
                 </td>
                 <td class="number">
                     <p>
                         <input type="number" placeholder="" class="the-input" id="the-input4" style="width: 190px; font-size: 180px; background-color: #8a00c2;">
-                    <!-- </br>
-                        <button class="insert-number">Click here!</button> -->
                     </p>
                 </td>
             </tr>
@@ -99,7 +82,6 @@
 
         </div>
 
-        <!-- <a href="https://github.com/AmpCoding">Github</a> -->
     </footer>
     <script src="./Scripts/script.js"></script>
 </body>
